--- a/src/style/global.css
+++ b/src/style/global.css
@@ -2,6 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'SUIT';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Medium.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  font-family: ‘SUIT’, sans-serif;
+}
+
 html {
   scroll-behavior: smooth;
+  
 }
+
+p {
+  line-height: 2rem;
+}
+
