--- a/src/style/global.css
+++ b/src/style/global.css
@@ -11,6 +11,7 @@
 
 * {
   font-family: ‘SUIT’, sans-serif;
+  word-break: keep-all;
 }
 
 html {
@@ -19,6 +20,10 @@ html {
 }
 
 p {
-  line-height: 2rem;
+  line-height: 2.5rem;
 }
 
+ul {
+  list-style-type: disc;
+  margin-top: 2rem;
+}
